--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master: Correct Houses Edition</title>
+    <title>7-Digit Master Tool v2026</title>
     <style>
         :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; --personal: #e3f2fd; }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
@@ -46,22 +46,21 @@
 </div>
 
 <script>
-    // แก้ไข Matrix ชื่อภพให้ตรงตามมาตรฐาน 7 เสา 3 แถว
     const houseNames = [
-        ["อัตตะ", "หินะ", "ธนัง", "ปิตา", "มาตา", "โภคา", "มัชฌิมา"],
-        ["ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ", "ปัตนิ"],
-        ["มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา", "ทาสี"]
+        ["อัตตะ", "หินะ", "ธนัง", "สหัสชะ", "ปิตา", "มาตา", "โภคา"],
+        ["มัชฌิมา", "ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ"],
+        ["ปัตนิ", "มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา"]
     ];
 
     const baseData = {
-        3: { n: "กำลังดาวจันทร์ (เล็ก)", g: "มีเสน่ห์ เมตตา มีการเปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
+        3: { n: "กำลังดาวจันทร์ (เล็ก)", g: "มีเสน่ห์ เมตตา เปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
         4: { n: "กำลังดาวพุธ (เล็ก)", g: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", b: "ระวังคำพูดสร้างศัตรู" },
-        5: { n: "กำลังดาวพฤหัส (เล็ก)", g: "ผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
-        6: { n: "กำลังดาวอาทิตย์", g: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังยศตำแหน่ง" },
-        7: { n: "กำลังดาวเสาร์ (เล็ก)", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล" },
-        8: { n: "กำลังดาวอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
+        5: { n: "กำลังดาวพฤหัส (เล็ก)", g: "เริ่มต้นสิ่งใหม่ได้ดี มีผู้ใหญ่ให้คำแนะนำ", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
+        6: { n: "กำลังดาวอาทิตย์", g: "มีชื่อเสียง มีพลังสร้างสรรค์ กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังเรื่องตำแหน่ง" },
+        7: { n: "กำลังดาวเสาร์ (เล็ก)", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล อมทุกข์" },
+        8: { n: "กำลังดาวอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ การทะเลาะวิวาท" },
         9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
-        10: { n: "กำลังดาวเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนัก ความลับถูกเปิดเผย" },
+        10: { n: "กำลังดาวเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนักอึ้ง ความลับถูกเปิดเผย" },
         11: { n: "ราชาโชค", g: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", b: "ประมาท ขาดการเตรียมตัว" },
         12: { n: "กำลังดาวราหู", g: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", b: "มัวเมา หลงผิด ถูกหลอกลวง" },
         13: { n: "มหาอุจ (กำลังอังคาร)", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
@@ -81,7 +80,7 @@
         3: { p: "อังคาร: ขยัน/ปะทะ", at: { g: "ขยัน รวดเร็ว เด็ดขาด", b: "ใจร้อนวู่วาม ใช้อารมณ์" }, money: { g: "ได้ลาภจากความเหนื่อยยาก", b: "จ่ายเพราะความวู่วาม" }, trouble: { g: "ฝ่าฟันอุปสรรคได้เร็ว", b: "ระวังอุบัติเหตุ/ทะเลาะวิวาท" }, general: { g: "มุ่งมั่นตั้งใจสูงมาก", b: "ระวังการปะทะขัดแย้ง" } },
         4: { p: "พุธ: เจรจา/สังคม", at: { g: "ฉลาดพูด มีไหวพริบ", b: "พูดมากไปจนเป็นภัย" }, money: { g: "ลาภจากการติดต่อ/นายหน้า", b: "โกงเอกสาร/ตกลงไม่ลงตัว" }, trouble: { g: "แก้ปัญหาได้ด้วยคำพูด", b: "ระวังถูกนินทา/เอกสารหาย" }, general: { g: "การสื่อสารราบรื่นดี", b: "ผิดพลาดเพราะการสื่อสาร" } },
         5: { p: "พฤหัส: สติปัญญา/ผู้ใหญ่", at: { g: "มีคุณธรรม ผู้ใหญ่เอ็นดู", b: "ดื้อรั้นในทฤษฎี/ยึดติด" }, money: { g: "ลาภจากวิชาความรู้", b: "เสียเงินช่วยผู้อื่นมากไป" }, trouble: { g: "ผู้ใหญ่ช่วยให้พ้นภัย", b: "ปัญหาข้อกฎหมาย/ระเบียบ" }, general: { g: "สำเร็จด้วยคำแนะนำที่ดี", b: "กดดันจากกฎระเบียบมากไป" } },
-        6: { p: "ศุกร์: ความสุข/ทรัพย์", at: { g: "รสนิยมดี มีโชคติดตัว", b: "หลงมัวเมาในกาม/กิเลส" }, money: { g: "เงินไหลมาเทมา มีลาภลอย", b: "ฟุ่มเฟือย/หมดไปกับความใคร่" }, trouble: { g: { g: "ความรัก/การเงินจะคลี่คลาย", b: "ปัญหาชู้สาว/ถูกหลอกลวง" }, general: { g: "ราบรื่นและมีความสุข", b: "ฟุ่มเฟือยจนเสียระบบ" } },
+        6: { p: "ศุกร์: ความสุข/ทรัพย์", at: { g: "รสนิยมดี มีโชคติดตัว", b: "หลงมัวเมาในกาม/กิเลส" }, money: { g: "เงินไหลมาเทมา มีลาภลอย", b: "ฟุ่มเฟือย/หมดไปกับความใคร่" }, trouble: { g: "ปัญหาการเงินจะคลี่คลาย", b: "ระวังปัญหาชู้สาว/ถูกหลอก" }, general: { g: "ราบรื่นและมีความสุข", b: "ฟุ่มเฟือยจนเสียระบบ" } },
         7: { p: "เสาร์: อดทน/ภาระ", at: { g: "อดทนสูง วางแผนรอบคอบ", b: "เครียด อมทุกข์ คิดมาก" }, money: { g: "ลาภจากที่ดิน/ของเก่า", b: "หนี้สิน/เงินทองติดขัด" }, trouble: { g: "อดทนจะผ่านอุปสรรคใหญ่", b: "โรคเรื้อรัง/สูญเสียใหญ่" }, general: { g: "เรื่องนั้นจะมั่นคงยาวนาน", b: "เหนื่อยยากและล่าช้ามาก" } }
     };
 
@@ -164,12 +163,10 @@
         const d = baseData[val] || { n: "กำลังสะสม", g: "พิจารณาตามกำลังดาวประธาน", b: "พิจารณาตามภพที่สถิต" };
         document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาที่ ${col+1}: สรุปผลฐาน ${val}`;
         document.getElementById('detailsContent').innerHTML = `
-            <div class="pillar-box">เส้นทางเสา: ${p1}(${v1}) &rarr; ${p2}(${v2}) &rarr; ${p3}(${v3})</div>
+            <div class="pillar-box">เส้นทางเสา: ${p1}(${v1}) → ${p2}(${v2}) → ${p3}(${v3})</div>
             <strong>ฐาน ${d.n}:</strong><br>
             <span class="good-tag">บทสรุปทางดี:</span> ${d.g}<br>
-            <span class="bad-tag">บทสรุปทางเสีย:</span> ${d.b}<br>
-            <hr>
-            <em>ความหมาย: เรื่องราวจากภพทั้ง 3 จะจบลงด้วยคุณภาพของฐานนี้เป็นสำคัญครับ</em>
+            <span class="bad-tag">บทสรุปทางเสีย:</span> ${d.b}
         `;
     }
     window.onload = setNow;
