Update title and house data for vertical pillar edition

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master Tool v2026</title>
+    <title>7-Digit Master: Vertical Pillar Edition</title>
     <style>
         :root { --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; --kalakini: #ffcdd2; --good-base: #fff9c4; --personal: #e3f2fd; }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
@@ -46,26 +46,27 @@
 </div>
 
 <script>
+    // แก้ไขการจัดวางภพให้เป็นแบบเสาแนวดิ่ง (Vertical Pillar) ตามภาพ Screenshot 1
     const houseNames = [
-        ["อัตตะ", "หินะ", "ธนัง", "สหัสชะ", "ปิตา", "มาตา", "โภคา"],
-        ["มัชฌิมา", "ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ"],
-        ["ปัตนิ", "มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา"]
+        ["อัตตะ", "หินะ", "ธนัง", "ปิตา", "มาตา", "โภคา", "มัชฌิมา"],
+        ["ตนุ", "กดุมภะ", "สหัชชะ", "พันธุ", "ปุตตะ", "อริ", "ปัตนิ"],
+        ["มรณะ", "สุภะ", "กัมมะ", "ลาภะ", "พยายะ", "ทาสา", "ทาสี"]
     ];
 
     const baseData = {
         3: { n: "กำลังดาวจันทร์ (เล็ก)", g: "มีเสน่ห์ เมตตา เปลี่ยนแปลงนุ่มนวล", b: "โลเล อ่อนไหวง่าย" },
         4: { n: "กำลังดาวพุธ (เล็ก)", g: "เจรจาดี มีไหวพริบ สื่อสารคล่อง", b: "ระวังคำพูดสร้างศัตรู" },
-        5: { n: "กำลังดาวพฤหัส (เล็ก)", g: "เริ่มต้นสิ่งใหม่ได้ดี มีผู้ใหญ่ให้คำแนะนำ", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
-        6: { n: "กำลังดาวอาทิตย์", g: "มีชื่อเสียง มีพลังสร้างสรรค์ กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังเรื่องตำแหน่ง" },
+        5: { n: "กำลังดาวพฤหัส (เล็ก)", g: "ผู้ใหญ่ให้คำปรึกษา เริ่มต้นสิ่งใหม่ได้ดี", b: "ดื้อรั้น ยึดติดความคิดตัวเอง" },
+        6: { n: "กำลังดาวอาทิตย์", g: "มีชื่อเสียง พลังสร้างสรรค์สูง กล้าเผชิญหน้า", b: "ใจร้อน อวดดี ระวังเรื่องยศตำแหน่ง" },
         7: { n: "กำลังดาวเสาร์ (เล็ก)", g: "อดทนสูง ทำงานละเอียดได้ดี", b: "เครียดจัด วิตกกังวล อมทุกข์" },
-        8: { n: "กำลังดาวอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ การทะเลาะวิวาท" },
-        9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
+        8: { n: "กำลังดาวอังคาร", g: "ขยัน รวดเร็ว ชนะอุปสรรคด้วยความกล้า", b: "ระวังอุบัติเหตุ ทะเลาะวิวาท" },
+        9: { n: "พระเกตุ", g: "ลางสังหรณ์แม่น สิ่งศักดิ์สิทธิ์คุ้มครอง โชคลาภกะทันหัน", b: "เพ้อฝัน ฟุ้งซ่าน เข้าใจยาก" },
         10: { n: "กำลังดาวเสาร์ (มฤตยู)", g: "เปลี่ยนแปลงเพื่อสิ่งใหม่ มั่นคงระยะยาว", b: "ภาระหนักอึ้ง ความลับถูกเปิดเผย" },
         11: { n: "ราชาโชค", g: "โชคลาภมาเองโดยไม่ต้องเหนื่อย มีคนหยิบยื่นโอกาส", b: "ประมาท ขาดการเตรียมตัว" },
         12: { n: "กำลังดาวราหู", g: "พลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติโดดเด่น", b: "มัวเมา หลงผิด ถูกหลอกลวง" },
-        13: { n: "มหาอุจ (กำลังอังคาร)", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
+        13: { n: "มหาอุจ", g: "พลังอำนาจสูงสุด แข็งแกร่ง ชนะคู่แข่งเด็ดขาด", b: "แตกหักง่าย ใช้อารมณ์เสียเรื่อง" },
         14: { n: "จักรพรรดิ", g: "มั่งคั่ง มั่นคง บารมีสูง ได้เป็นเจ้าคนนายคน", b: "ภาระรับผิดชอบสูงมากจนเครียด" },
-        15: { n: "กำลังดาวจันทร์", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น สมหวัง", b: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
+        15: { n: "กำลังดาวจันทร์", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น มีความสุขสมหวัง", b: "ใจอ่อนเสียการ ฟุ่มเฟือยเกินตัว" },
         16: { n: "โสฬสมงคล", g: "มงคลสูงสุด ปลอดภัย ประสบความสำเร็จรอบด้าน", b: "ทำผิดศีลจะได้รับผลกรรมเร็วและแรง" },
         17: { n: "กำลังดาวพุธ", g: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", b: "คิดมากเกินไป ใช้เล่ห์เหลี่ยมเกินไป" },
         18: { n: "มหาจักร", g: "สำเร็จที่ต้องบุกเบิก ลุยแล้วรวยยิ่งใหญ่", b: "เหนื่อยยากก่อนจะสบายสายตัวแทบขาด" },
@@ -82,6 +83,12 @@
         5: { p: "พฤหัส: สติปัญญา/ผู้ใหญ่", at: { g: "มีคุณธรรม ผู้ใหญ่เอ็นดู", b: "ดื้อรั้นในทฤษฎี/ยึดติด" }, money: { g: "ลาภจากวิชาความรู้", b: "เสียเงินช่วยผู้อื่นมากไป" }, trouble: { g: "ผู้ใหญ่ช่วยให้พ้นภัย", b: "ปัญหาข้อกฎหมาย/ระเบียบ" }, general: { g: "สำเร็จด้วยคำแนะนำที่ดี", b: "กดดันจากกฎระเบียบมากไป" } },
         6: { p: "ศุกร์: ความสุข/ทรัพย์", at: { g: "รสนิยมดี มีโชคติดตัว", b: "หลงมัวเมาในกาม/กิเลส" }, money: { g: "เงินไหลมาเทมา มีลาภลอย", b: "ฟุ่มเฟือย/หมดไปกับความใคร่" }, trouble: { g: "ปัญหาการเงินจะคลี่คลาย", b: "ระวังปัญหาชู้สาว/ถูกหลอก" }, general: { g: "ราบรื่นและมีความสุข", b: "ฟุ่มเฟือยจนเสียระบบ" } },
         7: { p: "เสาร์: อดทน/ภาระ", at: { g: "อดทนสูง วางแผนรอบคอบ", b: "เครียด อมทุกข์ คิดมาก" }, money: { g: "ลาภจากที่ดิน/ของเก่า", b: "หนี้สิน/เงินทองติดขัด" }, trouble: { g: "อดทนจะผ่านอุปสรรคใหญ่", b: "โรคเรื้อรัง/สูญเสียใหญ่" }, general: { g: "เรื่องนั้นจะมั่นคงยาวนาน", b: "เหนื่อยยากและล่าช้ามาก" } }
+    };
+
+    const houseContexts = {
+        "อัตตะ": "ตัวตน/จิตใจ", "หินะ": "จุดอ่อน/อุปสรรค", "ธนัง": "เงินติดตัว/ทรัพย์สิน", "ปิตา": "ผู้ใหญ่ฝ่ายชาย/หัวหน้า", "มาตา": "ผู้ใหญ่ฝ่ายหญิง/แม่", "โภคา": "บ้าน/รถ/อสังหาฯ", "มัชฌิมา": "ทางสายกลาง/ความพอดี",
+        "ตนุ": "ภาพลักษณ์/สิ่งที่แสดงออก", "กดุมภะ": "รายได้/การทำมาหากิน", "สหัชชะ": "เพื่อนฝูง/สังคม/การติดต่อ", "พันธุ": "ญาติพี่น้อง/รากฐาน", "ปุตตะ": "บุตร/บริวาร/สิ่งที่เริ่มใหม่", "อริ": "อุปสรรค/คู่แข่ง", "ปัตนิ": "คู่ครอง/หุ้นส่วน",
+        "มรณะ": "การสูญเสีย/การเปลี่ยนแปลง/ต่างประเทศ", "สุภะ": "ความสำเร็จ/ชื่อเสียง/ต่างถิ่น", "กัมมะ": "งาน/หน้าที่/สิ่งที่ต้องทำ", "ลาภะ": "โชคลาภ/ความสำเร็จที่ได้มา", "พยายะ": "ความลับ/สิ่งที่ปิดบัง/ความเสื่อม", "ทาสา": "ความเหนื่อยยาก/งานส่วนรวม", "ทาสี": "ความเหนื่อยยากส่วนตัว/บริวารหญิง"
     };
 
     let currentGrid = [];
@@ -144,6 +151,7 @@
 
     function showRelationalInfo(h, v) {
         const p = relationData[v];
+        const ctx = houseContexts[h] || "ความหมายตามภพ";
         let type = 'general';
         if (["อัตตะ", "ตนุ"].includes(h)) type = 'at';
         else if (["ธนัง", "กดุมภะ", "ลาภะ"].includes(h)) type = 'money';
@@ -151,9 +159,9 @@
 
         document.getElementById('detailsTitle').innerHTML = `พยากรณ์สัมพันธ์: ดาว ${v} ในภพ ${h}`;
         document.getElementById('detailsContent').innerHTML = `
-            <strong>ดาว ${p.p}</strong> ในตำแหน่ง <strong>ภพ ${h}</strong><br>
-            <span class="good-tag">จุดเด่น:</span> ${p[type].g}<br>
-            <span class="bad-tag">จุดระวัง:</span> ${p[type].b}
+            <strong>ดาว ${p.p}</strong> ในตำแหน่ง <strong>ภพ ${h} (${ctx})</strong><br>
+            <span class="good-tag">จุดเด่นสัมพันธ์ภพ:</span> ${p[type].g}<br>
+            <span class="bad-tag">จุดระวังสัมพันธ์ภพ:</span> ${p[type].b}
         `;
     }
 
