--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>7-Digit Master Tool: Journey & Thaksa System</title>
+    <title>7-Digit Master: Absolute Base 4 Edition</title>
     <style>
         :root { 
             --primary: #1a2a3a; --gold: #c5a02e; --bg: #f4f7f6; 
             --sri: #e8f5e9; --kalakini: #ffebee; --personal: #e3f2fd;
         }
         body { font-family: 'Tahoma', sans-serif; background: var(--bg); margin: 0; padding: 10px; display: flex; flex-direction: column; align-items: center; }
-        .container { background: white; border: 1px solid #ddd; border-radius: 12px; max-width: 680px; width: 100%; padding: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .container { background: white; border: 1px solid #ddd; border-radius: 12px; max-width: 700px; width: 100%; padding: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         .controls { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
         input, button { padding: 12px; border-radius: 6px; border: 1px solid #ccc; font-size: 15px; }
         button { cursor: pointer; background: var(--primary); color: white; border: none; font-weight: bold; }
@@ -36,9 +36,17 @@
         .base-label { font-size: 10px; font-weight: bold; color: #b71c1c; }
         .base-value { font-size: 24px; font-weight: bold; color: #b71c1c; }
 
-        .details-panel { padding: 15px; background: #fff; border: 2px solid var(--primary); border-radius: 8px; font-size: 14px; min-height: 280px; line-height: 1.6; }
+        .details-panel { padding: 15px; background: #fff; border: 2px solid var(--primary); border-radius: 8px; font-size: 14px; min-height: 250px; line-height: 1.6; margin-bottom: 15px; }
         .details-title { font-weight: bold; color: var(--primary); border-bottom: 2px solid var(--gold); margin-bottom: 10px; padding-bottom: 5px; font-size: 16px; }
         .journey-box { background: #fffde7; padding: 12px; border-radius: 8px; border: 1px solid #ffe082; margin-top: 10px; color: #4e342e; }
+
+        /* Star Deep Tips Styling */
+        .tips-panel { width: 100%; background: #ffffff; border: 1px solid #ddd; border-radius: 12px; padding: 15px; box-sizing: border-box; }
+        .tips-header { font-weight: bold; color: #d32f2f; font-size: 17px; margin-bottom: 10px; display: flex; align-items: center; gap: 10px; }
+        .tips-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
+        .tips-section { margin-bottom: 10px; }
+        .tips-label { font-weight: bold; color: #1a2a3a; text-decoration: underline; display: block; margin-bottom: 3px; }
+        .tips-content { color: #444; font-size: 13px; line-height: 1.5; }
         .good-tag { color: #2e7d32; font-weight: bold; background: #e8f5e9; padding: 2px 5px; border-radius: 4px; }
         .bad-tag { color: #d32f2f; font-weight: bold; background: #ffebee; padding: 2px 5px; border-radius: 4px; }
     </style>
@@ -58,8 +66,13 @@
     <table class="result-table"><tbody id="tableBody"></tbody></table>
 
     <div id="detailsBox" class="details-panel">
-        <div id="detailsTitle" class="details-title">ระบบพยากรณ์ประมวลผล (Journey Logic)</div>
-        <div id="detailsContent">คลิกที่ "เลขดาว" เพื่อร้อยเรียงเส้นทางภพ หรือคลิกที่ "เลขฐาน" เพื่อดูบทสรุปเสาพยากรณ์</div>
+        <div id="detailsTitle" class="details-title">วิเคราะห์ดวงยาม</div>
+        <div id="detailsContent">คลิกที่ "เลขดาว" เพื่อร้อยเรียงเส้นทางภพ หรือ "เลขฐาน" เพื่อดูความหมายเชิงลึก</div>
+    </div>
+
+    <div id="starTipsBox" class="tips-panel">
+        <div class="tips-header">💡 ข้อมูลเชิงลึกของดาว (Star Tips)</div>
+        <div id="tipsContent" class="tips-content">กดเลือกดาวในตารางเพื่อดูความหมายโดยละเอียด</div>
     </div>
 </div>
 
@@ -71,9 +84,9 @@
     ];
 
     const houseContexts = {
-        "อัตตะ": "ตัวตน ความคิดพื้นฐาน", "หินะ": "จุดอ่อน อุปสรรค ความเสื่อม", "ธนัง": "เงินติดตัว ทรัพย์สิน", "ปิตา": "หัวหน้าหรือผู้ใหญ่ชาย", "มาตา": "แม่หรือผู้ใหญ่หญิง", "โภคา": "อสังหาฯ/ทรัพย์ใหญ่", "มัชฌิมา": "ความพอดี/ทางสายกลาง",
-        "ตนุ": "ภาพลักษณ์/การแสดงออก", "กดุมภะ": "รายได้/การเงิน", "สหัชชะ": "สังคม/การติดต่อ", "พันธุ": "ครอบครัว/รากฐาน", "ปุตตะ": "บริวาร/สิ่งเริ่มต้นใหม่", "อริ": "อุปสรรค/คู่แข่ง", "ปัตนิ": "คู่ครอง/หุ้นส่วน",
-        "มรณะ": "ความสูญเสีย/ต่างแดน", "สุภะ": "ความสำเร็จ/ชื่อเสียง", "กัมมะ": "งาน/หน้าที่", "ลาภะ": "โชคลาภ", "พยายะ": "ความลับ/เสื่อมถอย", "ทาสา": "งานเหนื่อยเพื่อผู้อื่น", "ทาสี": "งานส่วนตัว/บริวารหญิง"
+        "อัตตะ": "ตัวตน/ความคิด", "หินะ": "จุดอ่อน/ความเสื่อม", "ธนัง": "เงินติดตัว", "ปิตา": "ผู้ใหญ่ชาย", "มาตา": "ผู้ใหญ่หญิง", "โภคา": "อสังหาฯ", "มัชฌิมา": "ความพอดี",
+        "ตนุ": "การแสดงออก", "กดุมภะ": "รายได้", "สหัชชะ": "สังคม/การติดต่อ", "พันธุ": "ครอบครัว/รากฐาน", "ปุตตะ": "บริวาร/สิ่งใหม่", "อริ": "อุปสรรค", "ปัตนิ": "คู่ครอง/หุ้นส่วน",
+        "มรณะ": "การสูญเสีย/ต่างแดน", "สุภะ": "ความสำเร็จ/ชื่อเสียง", "กัมมะ": "งาน/หน้าที่", "ลาภะ": "โชคลาภ", "พยายะ": "ความลับ/เสื่อม", "ทาสา": "งานเหนื่อย/ส่วนรวม", "ทาสี": "งานส่วนตัว"
     };
 
     const planetMeanings = {
@@ -87,12 +100,36 @@
     };
 
     const baseInterpretations = {
-        14: "จักรพรรดิ (ความสำเร็จยิ่งใหญ่)", 15: "กำลังจันทร์ (ทรัพย์คล่อง เมตตาดี)", 16: "โสฬส (มงคลรอบด้าน)", 19: "กำลังพฤหัส (ปัญญาเลิศ)",
-        9: "พระเกตุ (โชคกะทันหัน)", 13: "มหาอุจ (ชัยชนะเด็ดขาด)", 10: "มฤตยู (พลิกผัน)", 21: "กำลังศุกร์ (มหาลาภ)"
+        3: { n: "กำลังดาวจันทร์เล็ก", g: "มีความนุ่มนวล มีเสน่ห์ มีการเปลี่ยนแปลงเล็กน้อย", b: "โลเล จิตใจไม่นิ่ง หวั่นไหวตามคนอื่นง่าย" },
+        4: { n: "กำลังดาวพุธเล็ก", g: "การสื่อสารราบรื่น มีไหวพริบปฏิภาณดี", b: "ระวังคำพูดพล่อยๆ หรือการนินทาว่าร้าย" },
+        5: { n: "กำลังดาวพฤหัสเล็ก", g: "เริ่มสนใจใฝ่เรียนรู้ มีผู้ใหญ่ให้คำแนะนำเบื้องต้น", b: "ดื้อรั้น ยึดติดในความคิดตนเองมากเกินไป" },
+        6: { n: "กำลังดาวอาทิตย์", g: "มีพลังสร้างสรรค์ กล้าเผชิญหน้า มีชื่อเสียงปรากฏ", b: "ใจร้อน ทะเยอทะยานจนเกินตัว ระวังเรื่องหน้าตา" },
+        7: { n: "กำลังดาวเสาร์เล็ก", g: "มีความอดทนสูง ทำงานละเอียดได้ดี", b: "ความเครียดวิตกกังวล มีเรื่องต้องรอคอย" },
+        8: { n: "กำลังดาวอังคาร", g: "ความขยันขันแข็ง ทำงานรวดเร็ว ชนะคู่แข่ง", b: "ความวู่วาม อุบัติเหตุ หรือการทะเลาะวิวาท" },
+        9: { n: "พระเกตุ", g: "สิ่งศักดิ์สิทธิ์คุ้มครอง ลางสังหรณ์แม่น โชคลาภกะทันหัน", b: "ความฟุ้งซ่าน เพ้อฝัน จิตใจไม่อยู่กับเนื้อกับตัว" },
+        10: { n: "กำลังดาวเสาร์ (มฤตยู)", g: "ความมั่นคงในระยะยาว การวางแผนซับซ้อน", b: "ความพลิกผัน ความลับถูกเปิดเผย ภาระหนี้สิน" },
+        11: { n: "ราชาโชค", g: "โชคลาภที่ได้มาโดยง่าย มีคนหยิบยื่นโอกาสให้", b: "ประมาทขาดสติเพราะได้อะไรมาง่ายเกินไป" },
+        12: { n: "กำลังดาวราหู", g: "ไหวพริบพลิกแพลงเก่ง ทันคน ธุรกิจต่างชาติเด่น", b: "ความมัวเมา หลงผิด ถูกหลอกลวงหรือคดีความ" },
+        13: { n: "มหาอุจ (กำลังอังคาร)", g: "ชัยชนะที่เด็ดขาด มีพลังอำนาจสูงสุด", b: "ความรุนแรง แตกหักง่าย ใช้อารมณ์ตัดสินปัญหา" },
+        14: { n: "จักรพรรดิ", g: "ความสำเร็จยิ่งใหญ่ มั่นคง มีบารมีและบริวาร", b: "แบกรับภาระที่ยิ่งใหญ่เกินตัวจนเครียด" },
+        15: { n: "กำลังดาวจันทร์ (มหาเสน่ห์)", g: "เมตตามหานิยม ทรัพย์สินไหลลื่น มีความสุข", b: "ใจอ่อนจนเสียการ ฟุ่มเฟือย หลงระเริง" },
+        16: { n: "โสฬสมงคล", g: "มงคลสูงสุด สำเร็จรอบด้าน ปลอดภัยจากอันตราย", b: "หากทำผิดศีลจะได้รับผลกรรมรุนแรงและรวดเร็ว" },
+        17: { n: "กำลังดาวพุธ (มหาปัญญา)", g: "สติปัญญาเลิศ เจรจาค้าขายรุ่งเรืองที่สุด", b: "คิดมากเกินไปจนประสาทเสีย หรือใช้เล่ห์เหลี่ยมมากไป" },
+        18: { n: "มหาจักร", g: "ความสำเร็จยิ่งใหญ่ที่ต้องฝ่าฟัน ลุยแล้วได้ดี", b: "เหนื่อยยากลำบากสายตัวแทบขาดก่อนจะสำเร็จ" },
+        19: { n: "กำลังดาวพฤหัส (มหาเศรษฐี)", g: "ผู้ใหญ่เมตตา สำเร็จวิชาการ มั่งคั่งมั่นคง", b: "ถูกคาดหวังสูงจนกดดันตนเอง" },
+        20: { n: "กำลังดาวเสาร์ (มหาทุกข์)", g: "โครงการใหญ่ระดับชาติ ความอดทนเป็นเลิศ", b: "ทุกข์สาหัส ภาระหนี้สินรัดตัว ความเศร้าโศกเรื้อรัง" },
+        21: { n: "กำลังดาวศุกร์ (มหาลาภ)", g: "ความรัก ทรัพย์สมบัติ ความสำราญครบถ้วน", b: "หลงมัวเมาในกามารมณ์ กิเลสครอบงำ" }
     };
 
-    const thaksaNames = ["บริวาร", "อายุ", "เดช", "ศรี", "มูละ", "อุตสาหะ", "มนตรี", "กาลกิณี"];
-    const thaksaSeq = [1, 2, 3, 4, 7, 5, 8, 6];
+    const planetTips = {
+        1: { person: "ข้าราชการ, ผู้นำ, หัวหน้า", animal: "สิงโต, ไก่ชน", thing: "ทองคำ, ไฟฟ้า", place: "ที่สูง, โบสถ์", event: "การเลื่อนตำแหน่ง", ask: "ถ้าของหาย: หายในที่แจ้งหรือที่สูง มีโอกาสได้คืนจากผู้ใหญ่" },
+        2: { person: "ผู้หญิง, แม่, งานบริการ", animal: "สัตว์น้ำ, กระต่าย", thing: "เงิน, น้ำ", place: "ริมน้ำ, ทะเล", event: "การเดินทางทางน้ำ", ask: "ถ้าถามเรื่องรัก: เนื้อคู่เป็นคนช่างเอาใจ อ่อนหวาน" },
+        3: { person: "ทหาร, ตำรวจ, ช่าง", animal: "สุนัขเฝ้าบ้าน, ปลากัด", thing: "เหล็ก, อาวุธ", place: "โรงงาน, อู่ซ่อมรถ", event: "อุบัติเหตุ, การปะทะ", ask: "ถ้าของหาย: หายเพราะการแย่งชิงหรือขโมย มักเสียหาย" },
+        4: { person: "นักพูด, พ่อค้า, นักเขียน", animal: "นกแก้ว, สุนัขจิ้งจอก", thing: "หนังสือ, โทรศัพท์", place: "ตลาด, ไปรษณีย์", event: "การเจรจา, การทำสัญญา", ask: "ถ้าถามเรื่องงาน: จะมีการเซ็นสัญญาเร็วๆ นี้" },
+        5: { person: "ครู, พระ, หมอ", animal: "ช้าง, ม้า", thing: "พระพุทธรูป, ยา", place: "วัด, โรงพยาบาล", event: "การอบรม, การทำบุญ", ask: "ถ้าของหาย: หายไปในที่ปลอดภัย มีคนเก็บไว้ให้" },
+        6: { person: "นักแสดง, คนสวยงาม", animal: "นกยูง, ผีเสื้อ", thing: "เครื่องประดับ, ขนม", place: "ร้านเสริมสวย, ธนาคาร", event: "งานรื่นเริง, ความรัก", ask: "ถ้าถามเรื่องเงิน: จะมีเงินเข้ามาให้ใช้จ่ายลื่นไหล" },
+        7: { person: "กสิกร, คนเก่าแก่", animal: "งู, ตะขาบ", thing: "หิน, ดิน, ของเก่า", place: "ไร่นา, ป่าช้า", event: "การรอคอย, หนี้สิน", ask: "ถ้าถามเรื่องหนี้: จะได้คืนช้ามาก ต้องใช้ความอดทน" }
+    };
 
     let currentGrid = [];
     let currentBases = [];
@@ -129,6 +166,8 @@
 
     function updateThaksa(day) {
         dailyThaksa = {};
+        const thaksaNames = ["บริวาร", "อายุ", "เดช", "ศรี", "มูละ", "อุตสาหะ", "มนตรี", "กาลกิณี"];
+        const thaksaSeq = [1, 2, 3, 4, 7, 5, 8, 6];
         let start = thaksaSeq.indexOf(day === 8 ? 8 : day);
         const bar = document.getElementById('thaksaBar'); bar.innerHTML = '';
         for(let i=0; i<8; i++) {
@@ -166,7 +205,7 @@
         let trB = document.createElement('tr'); trB.className = 'row-base';
         for(let b=0; b<7; b++) {
             let val = currentBases[b];
-            trB.innerHTML += `<td class="${[14,15,16,19].includes(val)?'is-good-base':''}" onclick="showBaseSummary(${b}, ${val})">
+            trB.innerHTML += `<td class="${[14,15,16,19].includes(val)?'is-good-base':''}" onclick="showBaseFull(${b}, ${val})">
                 <span class="base-label">ฐาน</span>
                 <span class="base-value">${val}</span>
             </td>`;
@@ -175,47 +214,64 @@
     }
 
     function showJourney(star) {
-        let path = []; let pathCtx = []; let lastBase = 0;
+        let pathCtx = []; let lastBase = 0;
         for(let r=0; r<3; r++) {
             for(let c=0; c<7; c++) {
                 if(currentGrid[r][c] === star) {
                     let h = houseNames[r][c];
-                    path.push(h); pathCtx.push(`${h} (${houseContexts[h]})`);
+                    pathCtx.push(`${h} (${houseContexts[h]})`);
                     if(r === 2) lastBase = currentBases[c];
                 }
             }
         }
         const p = planetMeanings[star];
-        const bM = baseInterpretations[lastBase] || "กำลังสะสมพลังงานดาว";
+        const bD = baseInterpretations[lastBase] || { n: "กำลังดาวสะสม", g: "-", b: "-" };
         const tLabel = dailyThaksa[star];
 
-        document.getElementById('detailsTitle').innerHTML = `ร้อยเรียงเส้นทางดาว ${star} (${p.n}) + ทักษา: ${tLabel}`;
+        document.getElementById('detailsTitle').innerHTML = `ร้อยเรียงดาว ${star} (${p.n}) + ทักษา: ${tLabel}`;
         document.getElementById('detailsContent').innerHTML = `
             <strong>ดาวแห่ง:</strong> ${p.action}<br>
             <strong>คุณภาพทักษา:</strong> ${tLabel}<br>
-            <strong>บทสรุปฐานที่ 4:</strong> ${lastBase} (${bM})
+            <strong>บทสรุปฐานที่ 4:</strong> ${lastBase} (${bD.n})
             <div class="journey-box">
-                <strong>วิเคราะห์ร้อยเรียง:</strong> เริ่มต้นจาก <strong>${pathCtx[0]}</strong> เชื่อมโยงไป <strong>${pathCtx[1]}</strong> 
-                ปรากฏผลที่ <strong>${pathCtx[2]}</strong> โดยมีพื้นฐานจาก <strong>${bM}</strong> ครับ
+                <strong>วิเคราะห์ร้อยเรียง:</strong> เริ่มจาก <strong>${pathCtx[0]}</strong> เชื่อมโยง <strong>${pathCtx[1]}</strong> 
+                ปรากฏผลที่ <strong>${pathCtx[2]}</strong> โดยมีพื้นฐานจาก <strong>${bD.n}</strong>
             </div>
-            <p><span class="good-tag">จุดดี:</span> ${p.g}</p>
-            <p><span class="bad-tag">จุดเสีย:</span> ${p.b}</p>
+            <p><span class="good-tag">จุดเด่นดาว:</span> ${p.g}</p>
+            <p><span class="bad-tag">จุดเสียดาว:</span> ${p.b}</p>
         `;
+        showStarTips(star);
     }
 
-    function showBaseSummary(col, val) {
+    function showBaseFull(col, val) {
+        const d = baseInterpretations[val] || { n: "กำลังสะสม", g: "พิจารณาตามดาวประธาน", b: "พิจารณาตามภพสถิต" };
         const p1 = houseNames[0][col], p2 = houseNames[1][col], p3 = houseNames[2][col];
-        const v1 = currentGrid[0][col], v2 = currentGrid[1][col], v3 = currentGrid[2][col];
-        const bM = baseInterpretations[val] || "กำลังดาวสะสม";
-        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เสาพยากรณ์บรรจบที่ฐาน ${val}`;
+        document.getElementById('detailsTitle').innerHTML = `วิเคราะห์เจาะลึกฐานสรุปผลเลข ${val}`;
         document.getElementById('detailsContent').innerHTML = `
-            <div class="journey-box">เส้นทางเสา: ${p1}(${v1}) → ${p2}(${v2}) → ${p3}(${v3})</div>
-            <strong>บทสรุปฐาน ${val}:</strong> ${bM}<br>
-            พื้นฐานจาก <strong>${p1}</strong> ส่งผ่าน <strong>${p2}</strong> มาหยุดที่ <strong>${p3}</strong> 
-            คุณภาพชีวิตในช่วงนี้จึงขึ้นอยู่กับกำลังของฐาน ${val} เป็นหลักครับ
+            <strong>ชื่อฐาน:</strong> ${d.n}<br>
+            <div class="journey-box">เสาทางเดิน: ${p1} → ${p2} → ${p3}</div>
+            <span class="good-tag">ความหมายทางดี:</span> ${d.g}<br>
+            <span class="bad-tag">ความหมายทางเสีย:</span> ${d.b}
+            <hr>
+            <em>*ฐานนี้คือคุณภาพของเหตุการณ์ที่จะสรุปผลในเรื่อง ${p1}, ${p2}, และ ${p3}</em>
         `;
     }
 
+    function showStarTips(star) {
+        const tip = planetTips[star];
+        const p = planetMeanings[star];
+        document.getElementById('tipsContent').innerHTML = `
+            <div style="margin-bottom:10px; font-weight:bold; color:#d32f2f;">⭐ ข้อมูลขยายความดาว ${star} (${p.n})</div>
+            <div class="tips-grid">
+                <div class="tips-section"><span class="tips-label">บุคคล:</span> ${tip.person}</div>
+                <div class="tips-section"><span class="tips-label">สัตว์:</span> ${tip.animal}</div>
+                <div class="tips-section"><span class="tips-label">สิ่งของ:</span> ${tip.thing}</div>
+                <div class="tips-section"><span class="tips-label">สถานที่:</span> ${tip.place}</div>
+                <div class="tips-section"><span class="tips-label">เหตุการณ์:</span> ${tip.event}</div>
+                <div class="tips-section"><span class="tips-label">คำถามยอดฮิต:</span> ${tip.ask}</div>
+            </div>
+        `;
+    }
     window.onload = setNow;
 </script>
 </body>
