Refactor button layout for AI copy prompt

--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
         <div class="tips-header">💡 ข้อมูลเชิงลึกของดาว (Star Tips)</div>
         <div id="tipsContent" class="tips-content">กดเลือกดาวในตารางเพื่อดูความหมายโดยละเอียด</div>
     </div>
-    <button style="margin-top: 20px; text-align: center;">
-    <button onclick="copyPromptForAI()" style="background: #4285f4; padding: 15px 30px; border-radius: 50px; cursor: pointer; color: white; border: none; font-weight: bold; width: 100%;">
-        📋 คัดลอกข้อมูลส่งให้ AI วิเคราะห์เชิงลึก
-    </button>
+<div style="margin-top: 20px; width: 100%;">
+        <button onclick="copyPromptForAI()" style="background: #4285f4; padding: 15px 30px; border-radius: 50px; cursor: pointer; color: white; border: none; font-weight: bold; width: 100%;">
+            📋 คัดลอกข้อมูลส่งให้ AI วิเคราะห์เชิงลึก
+        </button>
+    </div>
     
 </div>
 
